# liftlogic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.ai/: AI_PATTERNS.md  API_GUIDE.md  CONTEXT.md  CONVENTIONS.md  DEPLOYMENT.md  SETUP.md  TESTING.md  WORKFLOWS.md
.claude/: hooks.json  settings.json  settings.local.json.example
.claude/commands/: add-feature.md  check.md  diagnose.md  extract.md  serve.md  test.md
.github/workflows/: ci.yml
data/: index.json  liftlogic.db
data/graph/: edges.json  graph_production.jsonl  manifest.json  nodes.json
liftlogic/: __init__.py
liftlogic/adapters/: __init__.py
liftlogic/adapters/faiss/: __init__.py  index.py
liftlogic/adapters/gemini/: __init__.py  client.py  models.py  test_client.py
liftlogic/adapters/llm/: __init__.py  service.py
liftlogic/adapters/neo4j/: __init__.py  client.py
liftlogic/adapters/ollama/: __init__.py  client.py
liftlogic/adapters/sqlite/: __init__.py  repository.py  test_repository.py
liftlogic/config/: __init__.py  errors.py  manifest.py  settings.py
liftlogic/domains/: __init__.py
liftlogic/domains/diagnosis/: __init__.py  contracts.py  expert_agents.py  models.py
liftlogic/domains/extraction/: __init__.py  contracts.py  evaluator.py  extractor.py  models.py  test_extraction.py
liftlogic/domains/knowledge/: __init__.py  contracts.py  graph_store.py  models.py  reasoner.py  test_graph_store.py
liftlogic/domains/orchestration/: __init__.py  cache.py  contracts.py  models.py  pipeline.py  router.py
liftlogic/domains/search/: __init__.py  models.py  (+3 more)
liftlogic/interfaces/: __init__.py
tools/: build_index.py  import_data.py
tools/migrations/: init_database.py  migrate_from_evih.py
(+45 files in other folders)
