[project]
name = "liftlogic"
version = "2.0.0"
description = "AI-native elevator/lift technical documentation intelligence system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core AI
    "google-generativeai>=0.8.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "neo4j>=5.0.0",
    "aiosqlite>=0.19.0",

    # Data Models
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Utilities
    "tenacity>=8.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "cryptography>=42.0.0",  # Token encryption

    # PDF Processing
    "pypdfium2>=4.0.0",

    # Monitoring
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
nlp = ["spacy>=3.7.0"]
local = ["ollama>=0.1.0"]

[project.scripts]
liftlogic = "liftlogic.interfaces.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["liftlogic"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["liftlogic"]
python_files = "test_*.py"
addopts = "-v --tb=short"
